Fixed link in page header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           </li>
         </ul>
 
-        <h3 class="muted"><a href="/">Spatial Point Patterns: Methodology and Applications with R</a><br> <small>by Adrian Baddeley, Ege Rubak and Rolf Turner</small></h3>
+        <h3 class="muted"><a href="/book">Spatial Point Patterns: Methodology and Applications with R</a><br> <small>by Adrian Baddeley, Ege Rubak and Rolf Turner</small></h3>
         <hr>
       </div>
 
