Added promo code to buy book.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-3" id="nav">
         <div class="well">
-          If you don't have the book yet you can buy it <a href="https://www.crcpress.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/9781482210200">from the publisher website.</a>.
+            If you don't have the book yet you can buy it <a href="https://www.crcpress.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/9781482210200">from the publisher website</a> using the promo code <strong>AJL01</strong> to get a <strong>20% discount</strong>.
         </div>
 
         <h4>Contents</h4>
