Added more links to default layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,27 @@
       <div class="row">
         <div class="col-xs-12 col-sm-3" id="nav">
         <div class="well">
-            If you don't have the book yet you can buy it <a href="https://www.crcpress.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/9781482210200">from the publisher website</a> using the promo code <strong>AJL01</strong> to get a <strong>20% discount</strong>.
+            For general info about spatstat go to <a href="/">spatstat.org</a>.
+        </div>
+
+        <div class="well">
+            If you don't have the book yet you can use the promo code <strong>AJL01</strong> to get a <strong>20% discount</strong> at <a href="https://www.crcpress.com/Spatial-Point-Patterns-Methodology-and-Applications-with-R/Baddeley-Rubak-Turner/9781482210200">the publisher website</a>.
+        </div>
+
+        <div class="well">
+            Read about past and upcoming spatstat workshops <a href="/workshops">here</a>.
         </div>
 
         <h4>Contents</h4>
-          <ul class="list-unstyled" id="toc"></ul>
+          <ul class="list-unstyled" id="toc">
+            <li><a href="chapter-code">R code for chapters</a></li>
+            <li><a href="sample-chapters">Free sample chapters</a></li>
+            <li><a href="reviews">Reviews of book</a></li>
+            <li><a href="errata">Errata</a></li>
+            <li><a href="biographies">Author biographies</a></li>
+          </ul>
 
-          <hr>
+
         </div>
 
         <div id="content" class="col-xs-12 col-sm-8 pull-right">
