--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         <h4>Contents</h4>
           <ul class="list-unstyled" id="toc">
             <li><a href="chapter-code">R code for chapters</a></li>
-            <li><a href="sample-chapters">Free sample chapters</a></li>
+            <li><a href="sample-chapters.html">Free sample chapters</a></li>
             <li><a href="reviews">Reviews of book</a></li>
             <li><a href="errata">Errata</a></li>
             <li><a href="biographies">Author biographies</a></li>
