--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="www/bootstrap.min.css" rel="stylesheet">
-    <link href="www/highlight.css" rel="stylesheet">
+    <link href="/book/www/bootstrap.min.css" rel="stylesheet">
+    <link href="/book/www/highlight.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700'
       rel='stylesheet' type='text/css'>
@@ -75,7 +75,7 @@
     </div> <!-- /container -->
 
   <script src="//code.jquery.com/jquery.js"></script>
-  <script src="www/bootstrap.min.js"></script>
-  <script src="www/toc.js"></script>
+  <script src="/book/www/bootstrap.min.js"></script>
+  <script src="/book/www/toc.js"></script>
   </body>
 </html>
