Trying to switch CSS from highlight.css to pygments.css.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="/book/www/bootstrap.min.css" rel="stylesheet">
-    <link href="/book/www/highlight.css" rel="stylesheet">
+    <link href="/book/www/pygments.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700'
       rel='stylesheet' type='text/css'>
