--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,11 +48,11 @@
 
         <h4>Contents</h4>
           <ul class="list-unstyled" id="toc">
-            <li><a href="chapter-code">R code for chapters</a></li>
+            <li><a href="chapter-code.html">R code for chapters</a></li>
             <li><a href="sample-chapters.html">Free sample chapters</a></li>
-            <li><a href="reviews">Reviews of book</a></li>
-            <li><a href="errata">Errata</a></li>
-            <li><a href="biographies">Author biographies</a></li>
+            <li><a href="reviews.html">Reviews of book</a></li>
+            <li><a href="errata.pdf">Errata (pdf)</a></li>
+            <li><a href="biographies.html">Author biographies</a></li>
           </ul>
 
 
