Filled in table of contents in nav.html.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,2 +1,29 @@
+<li class="dropdown-header">Prerequisites</li>
+<li><a href="instructions.html">Instructions for use</a></li>
+<li><a href="fijiquakes.html"></a>fijiquakes.R</li>
+<li><a href="rSpecialMC.html"></a>rSpecialMC.R</li>
+<li><a href="rSpecialNS.html"></a>rSpecialNS.R</li>
+<li><a href="shortestpath.html"></a>shortestpath.R</li>
+<li><a href="short.output.html"></a>short.output.R</li>
+<li><a href="startup.html"></a>startup.R</li>
 <li class="dropdown-header">Part I: BASICS</li>
-<li><a href="01intro.html">Introduction</a></li>
+<li><a href="chapter01.html">Introduction</a></li>
+<li><a href="chapteri02.html">Software Essentials</a></li>
+<li><a href="chapter03.html">Collecting and Handling Point Pattern Data</a></li>
+<li><a href="chapter04.html">Inspecting and Exploring Data</a></li>
+<li><a href="chapter05.html">Point Process Methods</a></li>
+<li class="dropdown-header">Part II: EXPLORATORY DATA ANALYSIS</li>
+<li><a href="chapter06.html">Intensity</a></li>
+<li><a href="chapter07.html">Correlation</a></li>
+<li><a href="chapter08.html">Spacing</a></li>
+<li class="dropdown-header">Part III: STATISTICAL INFERENCE</li>
+<li><a href="chapter09.html">Poisson Models</a></li>
+<li><a href="chapter10.html">Hypothesis Tests and Simulation Envelopes</a></li>
+<li><a href="chapter11.html">Model Validation</a></li>
+<li><a href="chapter12.html">Cluster and Cox Models</a></li>
+<li><a href="chapter13.html">Gibbs Models</a></li>
+<li><a href="chapter14.html">Patterns of Several Types of Points</a></li>
+<li class="dropdown-header">Part IV: ADDITIONAL STRUCTURE</li>
+<li><a href="chapter15.html">Higher-Dimensional Spaces and Marks</a></li>
+<li><a href="chapter16.html">Replicated Point Patterns and Designed Experiments</a></li>
+<li><a href="chapter17.html">Point Patterns on a Linear Network</a></li>
