Bugfixes in nav bar.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <li class="dropdown-header">Prerequisites</li>
 <li><a href="instructions.html">Instructions for use</a></li>
-<li><a href="fijiquakes.html"></a>fijiquakes.R</li>
-<li><a href="rSpecialMC.html"></a>rSpecialMC.R</li>
-<li><a href="rSpecialNS.html"></a>rSpecialNS.R</li>
-<li><a href="shortestpath.html"></a>shortestpath.R</li>
-<li><a href="short.output.html"></a>short.output.R</li>
-<li><a href="startup.html"></a>startup.R</li>
+<!--<li><a href="fijiquakes.html">fijiquakes.R</a></li>-->
+<!--<li><a href="rSpecialMC.html">rSpecialMC.R</a></li>-->
+<!--<li><a href="rSpecialNS.html">rSpecialNS.R</a></li>-->
+<!--<li><a href="shortestpath.html">shortestpath.R</a></li>-->
+<!--<li><a href="short.output.html">short.output.R</a></li>-->
+<!--<li><a href="startup.html">startup.R</a></li>-->
 <li class="dropdown-header">Part I: BASICS</li>
 <li><a href="chapter01.html">Introduction</a></li>
 <li><a href="chapteri02.html">Software Essentials</a></li>
