Tweaked nav bar.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,23 +7,23 @@
 <!--<li><a href="short.output.html">short.output.R</a></li>-->
 <!--<li><a href="startup.html">startup.R</a></li>-->
 <li class="dropdown-header">Part I: BASICS</li>
-<li><a href="chapter01.html">Introduction</a></li>
-<li><a href="chapteri02.html">Software Essentials</a></li>
-<li><a href="chapter03.html">Collecting and Handling Point Pattern Data</a></li>
-<li><a href="chapter04.html">Inspecting and Exploring Data</a></li>
-<li><a href="chapter05.html">Point Process Methods</a></li>
+<li><a href="chapter01.html">Chapter 1: Introduction</a></li>
+<li><a href="chapter02.html">Chapter 2: Software Essentials</a></li>
+<li><a href="chapter03.html">Chapter 3: Collecting and Handling Point Pattern Data</a></li>
+<li><a href="chapter04.html">Chapter 4: Inspecting and Exploring Data</a></li>
+<li><a href="chapter05.html">Chapter 5: Point Process Methods</a></li>
 <li class="dropdown-header">Part II: EXPLORATORY DATA ANALYSIS</li>
-<li><a href="chapter06.html">Intensity</a></li>
-<li><a href="chapter07.html">Correlation</a></li>
-<li><a href="chapter08.html">Spacing</a></li>
+<li><a href="chapter06.html">Chapter 6: Intensity</a></li>
+<li><a href="chapter07.html">Chapter 7: Correlation</a></li>
+<li><a href="chapter08.html">Chapter 8: Spacing</a></li>
 <li class="dropdown-header">Part III: STATISTICAL INFERENCE</li>
-<li><a href="chapter09.html">Poisson Models</a></li>
-<li><a href="chapter10.html">Hypothesis Tests and Simulation Envelopes</a></li>
-<li><a href="chapter11.html">Model Validation</a></li>
-<li><a href="chapter12.html">Cluster and Cox Models</a></li>
-<li><a href="chapter13.html">Gibbs Models</a></li>
-<li><a href="chapter14.html">Patterns of Several Types of Points</a></li>
+<li><a href="chapter09.html">Chapter 9: Poisson Models</a></li>
+<li><a href="chapter10.html">Chapter 10: Hypothesis Tests and Simulation Envelopes</a></li>
+<li><a href="chapter11.html">Chapter 11: Model Validation</a></li>
+<li><a href="chapter12.html">Chapter 12: Cluster and Cox Models</a></li>
+<li><a href="chapter13.html">Chapter 13: Gibbs Models</a></li>
+<li><a href="chapter14.html">Chapter 14: Patterns of Several Types of Points</a></li>
 <li class="dropdown-header">Part IV: ADDITIONAL STRUCTURE</li>
-<li><a href="chapter15.html">Higher-Dimensional Spaces and Marks</a></li>
-<li><a href="chapter16.html">Replicated Point Patterns and Designed Experiments</a></li>
-<li><a href="chapter17.html">Point Patterns on a Linear Network</a></li>
+<li><a href="chapter15.html">Chapter 15: Higher-Dimensional Spaces and Marks</a></li>
+<li><a href="chapter16.html">Chapter 16: Replicated Point Patterns and Designed Experiments</a></li>
+<li><a href="chapter17.html">Chapter 17: Point Patterns on a Linear Network</a></li>
