Omit /book from links after move to book.spatstat.org.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/book/www/bootstrap.min.css" rel="stylesheet">
-    <link href="/book/www/pygments.css" rel="stylesheet">
+    <link href="/www/bootstrap.min.css" rel="stylesheet">
+    <link href="/www/pygments.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700'
       rel='stylesheet' type='text/css'>
@@ -17,7 +17,7 @@
     <div class="container">
 
       <div class="masthead">
-        <h3 class="muted"><a href="/book">Spatial Point Patterns: Methodology and Applications with R</a><br> <small>by Adrian Baddeley, Ege Rubak and Rolf Turner</small></h3>
+        <h3 class="muted"><a href="/">Spatial Point Patterns: Methodology and Applications with R</a><br> <small>by Adrian Baddeley, Ege Rubak and Rolf Turner</small></h3>
         <hr>
       </div>
 
@@ -37,11 +37,11 @@
 
         <h4>Contents</h4>
           <ul class="list-unstyled" id="toc">
-            <li><a href="/book/chapter-code/instructions.html">R code for chapters</a></li>
-            <li><a href="/book/sample-chapters.html">Free sample chapters</a></li>
-            <li><a href="/book/reviews.html">Reviews of book</a></li>
-            <li><a href="/book/errata.pdf">Errata (pdf)</a></li>
-            <li><a href="/book/biographies.html">Author biographies</a></li>
+            <li><a href="/chapter-code/instructions.html">R code for chapters</a></li>
+            <li><a href="/sample-chapters.html">Free sample chapters</a></li>
+            <li><a href="/reviews.html">Reviews of book</a></li>
+            <li><a href="/errata.pdf">Errata (pdf)</a></li>
+            <li><a href="/biographies.html">Author biographies</a></li>
           </ul>
 
 
@@ -64,7 +64,7 @@
     </div> <!-- /container -->
 
   <script src="//code.jquery.com/jquery.js"></script>
-  <script src="/book/www/bootstrap.min.js"></script>
-  <!--<script src="/book/www/toc.js"></script>-->
+  <script src="/www/bootstrap.min.js"></script>
+  <!--<script src="/www/toc.js"></script>-->
   </body>
 </html>
