--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-3" id="nav">
         <div class="well">
-            For general info about spatstat go to <a href="/">spatstat.org</a>.
+            For general info about spatstat go to <a href="http://spatstat.org">spatstat.org</a>.
         </div>
 
         <div class="well">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="well">
-            Read about past and upcoming spatstat workshops <a href="/workshops">here</a>.
+            Read about past and upcoming spatstat workshops <a href="http://spatstat.org/workshops">here</a>.
         </div>
 
         <h4>Contents</h4>
