Added note about reproducing the results

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
             <li><a href="/sample-chapters.html">Free sample chapters</a></li>
             <li><a href="/reviews.html">Reviews of book</a></li>
             <li><a href="/errata.pdf">Errata (pdf)</a></li>
+            <li><a href="/reproducible.pdf">Reproducing the results (pdf)</a></li>
             <li><a href="/biographies.html">Author biographies</a></li>
           </ul>
 
